charts/jupyterhub.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jupyter
  labels:
    kubernetes.io/metadata.name: jupyter
    name: jupyter
