charts/minio.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: storage
  labels:
    kubernetes.io/metadata.name: storage
    name: storage
