charts/spark-history-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history-server
  namespace: compute
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: spark-history.matrix.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: spark-history-server
                port:
                  number: 18080
            path: /
